package Structures;

import jakarta.persistence.Table;
@Table(name = "inventory")
/**
 * An object representing an inventory item tracked in a system. For example: Ingredients, Merchandise, etc.
 */
public class InventoryItem extends Item{

}
