package Structures;

/**
 * A superclass representing an item in a POS system. Subclassed into Inventory and Menu items.
 */
public class Item extends DatabaseEntity{

    private String name;
    private int quantity;

}
