@startuml

title __STRUCTURES's Class Diagram__\n

  namespace Structures {
    class Structures.DatabaseEntity {
    }
  }
  

  namespace Structures {
    class Structures.InventoryItem {
    }
  }
  

  namespace Structures {
    class Structures.Item {
        - name : String
        - quantity : int
    }
  }
  

  namespace Structures {
    class Structures.MenuItem {
        - available : boolean
        - ingredients : ArrayList<Item>
        - nutritionFacts : ArrayList<String>
        - salePrice : double
    }
  }
  

  namespace Structures {
    class Structures.Order {
        - customerID : String
        - datePlaced : String
        - items : ArrayList<Item>
        - numItems : int
        - orderID : String
        - totalCost : double
    }
  }
  

  namespace Structures {
    enum OrderStatus {
      In_Progress
      Ready
      Received
      Submitted
    }
  }
  

  namespace Structures {
    class Structures.User {
        - email : String
        - favorites : ArrayList<MenuItem>
        - password : String
        - payments : ArrayList<String>
        - previousOrders : ArrayList<Order>
        - userID : int
        - userName : String
        + User()
        + getEmail()
        + getFavorites()
        + getPassword()
        + getPayments()
        + getPreviousOrders()
        + getUserID()
        + getUserName()
        + setEmail()
        + setFavorites()
        + setPassword()
        + setPayments()
        + setPreviousOrders()
        + setUserID()
        + setUserName()
    }
  }
  

  Structures.InventoryItem -up-|> Structures.Item
  Structures.Item -up-|> Structures.DatabaseEntity
  Structures.MenuItem -up-|> Structures.Item
  Structures.Order -up-|> Structures.DatabaseEntity
  Structures.Order o-- Structures.OrderStatus : status
  Structures.User -up-|> Structures.DatabaseEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
